refactor: improve structure; fix middleware error

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@ DB_HOST=your_host              (ex.: localhost)
 DB_PORT=your_port              (ex.: 5432)
 DB_USER=your_user_name         (ex.: postgres)
 DB_NAME=your_database_name     (ex.: password)
-DB_PASS=your_secret_password   (ex.: valex-api)
+DB_PASS=your_secret_password   (ex.: valex_api)
 PORT=your_server_port          (ex.: 4242)
