--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
 		"noImplicitAny": false,
     "esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
     "module": "es6",
     "moduleResolution": "node",
     "outDir": "dist"
