feat: make unblock card endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
+DATABASE_URL=your_database_url (ex.: postgres://postgres:password@localhost:5432/valex_api) [ps.: use this :P]
+
 DB_HOST=your_host              (ex.: localhost)
 DB_PORT=your_port              (ex.: 5432)
 DB_USER=your_user_name         (ex.: postgres)
 DB_NAME=your_database_name     (ex.: password)
 DB_PASS=your_secret_password   (ex.: valex_api)
+
 PORT=your_server_port          (ex.: 4242)
